Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24986

V4 does not report QObject* type mismatches

    XMLWordPrintable

Details

    Description

      If you attempt to bind a QObject-derived type to a property with an incompatible QObject-derived type, V8 will report the error with a warning.
      V4 fails to diagnose the error.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes