tests/auto/qml/qqmlproperty/data/invalidBinding.qml
@@ -1,0 +1,14 @@
+import QtQuick 2.0
+
+Item {
+    property Text text: myText
+
+    property Rectangle rectangle1: myText
+    property Rectangle rectangle2: getMyText()
+
+    function getMyText() { return myText; }
+
+    Text {
+        id: myText
+    }
+}
