tests/auto/qml/qqmlproperty/tst_qqmlproperty.cpp
@@ -133,6 +133,7 @@ private slots:
     void aliasPropertyBindings();
     void noContext();
     void assignEmptyVariantMap();
+    void warnOnInvalidBinding();
 
     void copy();
 private:
@@ -1705,6 +1706,25 @@ void tst_qqmlproperty::assignEmptyVariantMap()
     QCOMPARE(o.variantMap().count(), 0);
     QCOMPARE(o.variantMap().isEmpty(), true);
 
+    delete obj;
+}
+
+void tst_qqmlproperty::warnOnInvalidBinding()
+{
+    QUrl testUrl(testFileUrl("invalidBinding.qml"));
+    QString expectedWarning;
+
+    // V4 error message for property-to-property binding
+    expectedWarning = testUrl.toString() + QString::fromLatin1(":6:36: Unable to assign QQuickText to QQuickRectangle");
+    QTest::ignoreMessage(QtWarningMsg, expectedWarning.toLatin1().constData());
+
+    // V8 error message for function-to-property binding
+    expectedWarning = testUrl.toString() + QString::fromLatin1(":7:36: Unable to assign QQuickText to QQuickRectangle");
+    QTest::ignoreMessage(QtWarningMsg, expectedWarning.toLatin1().constData());
+
+    QQmlComponent component(&engine, testUrl);
+    QObject *obj = component.create();
+    QVERIFY(obj);
     delete obj;
 }
 
